--- a/basicTutorial.html
+++ b/basicTutorial.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Document Object Model:30 Days Of JavaScript</title>
+    <title>Document Object Model</title>
   </head>
 
   <body>
+    <button>Click Me</button>
+
     <script>
-      // creating multiple elements and appending to parent element
-      let title;
-      for (let i = 0; i < 3; i++) {
-        title = document.createElement("h1");
-        title.className = "title";
-        title.style.fontSize = "24px";
-        title.textContent = i;
-        document.body.appendChild(title);
-      }
+      const button = document.querySelector("button");
+      button.addEventListener("click", (e) => {
+        console.log("e gives the event listener object:", e);
+        console.log("e.target gives the selected element: ", e.target);
+        console.log(
+          "e.target.textContent gives content of selected element: ",
+          e.target.textContent
+        );
+      });
     </script>
   </body>
 </html>
