modified:   basicTutorial.html

--- a/basicTutorial.html
+++ b/basicTutorial.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Document Object Model</title>
+    <title>Document Object Model:30 Days Of JavaScript</title>
   </head>
 
   <body>
-    <button>Click Me</button>
+    <h1>Key events: Press any key</h1>
 
     <script>
-      const button = document.querySelector("button");
-      button.addEventListener("click", (e) => {
-        console.log("e gives the event listener object:", e);
-        console.log("e.target gives the selected element: ", e.target);
-        console.log(
-          "e.target.textContent gives content of selected element: ",
-          e.target.textContent
-        );
+      document.body.addEventListener("keypress", (e) => {
+        alert(e.keyCode);
       });
     </script>
   </body>
